--- a/components/slices/ImageUploadGrid/ImageUploadGrid.module.scss
+++ b/components/slices/ImageUploadGrid/ImageUploadGrid.module.scss
@@ -40,7 +40,7 @@
   }
 
   @media (max-width: $breakpoint-sm) {
-    grid-template-columns: repeat(4, 1fr);
+    grid-template-columns: repeat(2, 1fr);
   }
 
   &.dragging {
@@ -69,8 +69,6 @@
 .image {
   width: 100%;
   height: 100%;
-  object-fit: cover;
-  aspect-ratio: 1;
 }
 
 .videoPreview {
